Fixed lightboxes on mobile.

--- a/style.css
+++ b/style.css
@@ -12,20 +12,19 @@ main{
 #lightbox-bg {
     background: rgba(0, 0, 0, 0.7);
     z-index: 100;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     display: none;
+    justify-content: center;
     backdrop-filter: blur(7px);
+    overflow: hidden;
 }
 
 .lightbox-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height:fit-content;
     z-index: 101;
 }
 
@@ -81,4 +80,12 @@ img {
     max-width:14em;
     height: auto;
     cursor: pointer;
+}
+.has-text-responsive {
+    font-size: clamp(16px, 2.5vw, 24px);
+  }
+.is-centered{
+    text-align:center;
+    margin:auto;
+    align-content: center;
 }
